fix: card overflow

--- a/src/App.css
+++ b/src/App.css
@@ -36,8 +36,8 @@ form {
 }
 
 .cardContainer {
-  height: 65%;
-  width: 100%;
+  /* height: 65%; */
+  width: 80%;
   outline: 1px solid white;
   
   display: flex;
